# STOCK_MARKET_SMULATOR

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: GetBoost.cmake  GetLibcurl.cmake  GetSoci.cmake  GetwxWidgets.cmake  Testing.cmake  buildinfo.h.in
src/app/: CMakeLists.txt
src/app/GUI/: CLItest.cpp  CMakeLists.txt  GUItest.cpp  bootstrap.cpp  resource.rc
src/app/GUI/pages/: CMakeLists.txt  equityPage.cpp  loginPage.cpp  menuBar.cpp  profilePage.cpp  registerPage.cpp  stockMarketFrame.cpp
src/app/GUI/pages/include/: coordinator.hpp  equityPage.hpp  loginPage.hpp  menuBar.hpp  profilePage.hpp  registerPage.hpp  stockMarketFrame.hpp
src/app/lib/: CMakeLists.txt
src/app/lib/api/: CMakeLists.txt
src/app/lib/api/alphavantageApi/: CMakeLists.txt  alphavantage.cpp
src/app/lib/api/alphavantageApi/include/: alphavantage.hpp
src/app/lib/api/stockApi/: stockApi.hpp
src/app/lib/api/timeApi/: CMakeLists.txt  timeApi.cpp
src/app/lib/api/timeApi/include/: timeApi.hpp
src/app/lib/database/: CMakeLists.txt  databaseClient.hpp
src/app/lib/database/mySqlClient/: CMakelists.txt  mySqlClient.cpp
src/app/lib/database/mySqlClient/include/: mySqlClient.hpp
src/app/lib/httpClient/: CMakeLists.txt
src/app/lib/httpClient/curl/include/: curlClient.hpp
src/app/lib/model/: CMakeLists.txt  equityModel.cpp  profileModel.cpp  refreshModel.cpp  searchModel.cpp  settingsModel.cpp  signInModel.cpp  signUpModel.cpp
src/app/lib/model/include/: equityModel.hpp  profileModel.hpp  refreshModel.hpp  searchModel.hpp  settingsModel.hpp  signInModel.hpp  signUpModel.hpp
src/lib/: CMakeLists.txt
src/lib/api/: CMakeLists.txt
src/lib/api/alphavantageApi/: CMakeLists.txt  alphavantage.cpp  exe.cpp
src/lib/api/alphavantageApi/include/: alphavantage.hpp
src/lib/api/stockApi/: CMakeLists.txt  stockApi.cpp  stockApi.hpp
src/lib/api/stockApi/include/: stockApi.hpp
src/lib/database/: CMakeLists.txt  databaseClient.hpp
src/lib/database/mySqlClient/: mySqlClient.cpp
src/lib/database/mySqlClient/include/: mySqlClient.hpp
src/lib/httpClient/: httpClient.hpp
src/lib/httpClient/curl/: CMakeLists.txt  curlClient.cpp
test/: CMakeLists.txt  databaseClientMock.cpp  httpClientMock.cpp  stockApiMock.cpp  timeApiMock.cpp
test/alphavantageApiSuiteTest/: CMakeLists.txt  alphavantageApiTest.cpp
test/curlTest/: CMakeLists.txt  curlUnitTest.cpp
test/modelTest/: CMakeLists.txt  equityModelTest.cpp  profileModelTest.cpp  searchModelTest.cpp  settingsModelTest.cpp  signInModelTest.cpp  signUpModelTest.cpp
test/mySqlClientTest/: CMakeLists.txt  mySqlClientTest.cpp
test/timeApiTest/: CMakeLists.txt  timeApiTest.cpp
